# AndroidVideoStudy

app/: build.gradle
app/src/androidTest/java/com/wangc/androidvideostudy/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/wangc/androidvideostudy/: AACEncode.java  AudioRecordActivity.java  Camera2Activity.java  CameraActivity.java  EglHelper.java  FFmpegDemoActivity.java  H264Encoder.java  JniTestActivity.java  MEglSurfaceView.java  MGlRender.java  MainActivity.kt  MediaExtractorActivity.java  MySurfaceView.java  OpenslEsActivity.java
app/src/main/res/layout/: activity_audio_record.xml  activity_camera.xml  activity_camera2.xml  activity_ffmpeg_demo.xml  activity_jni_test.xml  activity_main.xml  activity_media_extractor.xml  activity_opensl_es.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/wangc/androidvideostudy/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
myplayer/: CMakeLists.txt  build.gradle
myplayer/src/androidTest/java/com/wangc/myplayer/: ExampleInstrumentedTest.java
myplayer/src/main/: AndroidManifest.xml
myplayer/src/main/cpp/: AndroidLog.h  FFmpegTest.cpp  FFmpegTest.h  OpenSlEsTest.cpp  OpenSlEsTest.h  PcmToMp3Test.cpp  PcmToMp3Test.h  Test.cpp  Test.h  WAudio.cpp  WAudio.h  WCallJava.cpp  WCallJava.h  WFFmpeg.cpp  WFFmpeg.h  Wqueue.cpp  Wqueue.h  Wstatus.cpp  Wstatus.h  native-lib.cpp
myplayer/src/main/java/com/wangc/myplayer/: Demo.java  FFmpegUtils.java  MyPlayer.java  OnPrepareListener.java  User.java
myplayer/src/test/java/com/wangc/myplayer/: ExampleUnitTest.java
